# chespi2

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
chespi/: __init__.py  chezod.py  cli.py  ga.py  io.py  potenci.py  prediction.py  visualization.py
chespi/data/: corvals6.json  histprobs4.npy  tablecent.csv  tablecombdevs.csv  tablenei.csv  tablephshifts.csv  tabletempk.csv  tabletermcorrs.csv
